Version updates and refactoring